--- a/html/test.html
+++ b/html/test.html
@@ -35,7 +35,7 @@
                         <form action="" class="search-form">
                             <ul class="search-list">
                                 <li class="search-list-item">
-                                    <a href="#" class="search-list-link">Найти товар</a>
+                                    <input type="text" class="search-list-input" placeholder="Найти товар">
                                 </li>
                                 <li class="search-list-icon">
                                     <a href="#" class="search-list-link"><img src="ep_search.svg" alt=""></a>
@@ -62,14 +62,16 @@
         <div class="wrapper">
             <div class="swapper">
                 <div class="container">
-                    <div class="container-content">
-                        <p class="container-title">Bang & Olufsen<br>Beoplay H9</p>
-                        <p class="container-text">Потрясающее звучание раскрывающее огромное количество деталей</p>
-                        <p class="container-price">49 000₽</p>
-                        <p class="container-sale">22 000₽</p>
+                    <div>
+                        <div class="container-content">
+                            <p class="container-title">Bang & Olufsen Beoplay H9</p>
+                            <p class="container-text">Потрясающее звучание раскрывающее огромное количество деталей</p>
+                            <p class="container-price">49 000₽</p>
+                            <p class="container-sale">22 000₽</p>
+                        </div>
                         <div class="container-btn">
                             <a href="#" class="container-btn-item">Перейти к предложению</a>
-                            <a href="#" class="container-btn-item"><img src="strelka.svg" alt=""></a>
+                            <a href="#" class="container-btn-img"><img src="strelka.svg" alt=""></a>
                         </div>
                     </div>
 
