--- a/html/test.html
+++ b/html/test.html
@@ -61,7 +61,7 @@
     <main>
         <div class="wrapper">
             <div class="swapper">
-                <div class="container">
+                <section class="container">
                     <div>
                         <div class="container-content">
                             <p class="container-title">Bang & Olufsen Beoplay H9</p>
@@ -74,16 +74,228 @@
                             <a href="#" class="container-btn-img"><img src="strelka.svg" alt=""></a>
                         </div>
                     </div>
-
                     <div class="container-img"><img src="image 1.svg" alt=""></div>
+                </section>
 
-                </div>
+                <section class="promo">
+                    <div class="promo__item">
+                        <img class="promo__item-img" src="sale.svg" alt="">
+                        <a href="#" class="promo__item-btn">
+                            <p>Распродажа товаров</p>
+                            <img class="promo__item-arrow" src="strelka2.svg" alt="">
+                        </a>
+                    </div>
+
+                    <div class="promo__item">
+                        <img class="promo__item-img" src="sale.svg" alt="">
+                        <a href="#" class="promo__item-btn">
+                            <p>Распродажа товаров</p>
+                            <img class="promo__item-arrow" src="strelka2.svg" alt="">
+                        </a>
+                    </div>
+
+                    <div class="promo__item">
+                        <img class="promo__item-img" src="sale.svg" alt="">
+                        <a href="#" class="promo__item-btn">
+                            <p>Распродажа товаров</p>
+                            <img class="promo__item-arrow" src="strelka2.svg" alt="">
+                        </a>
+                    </div>
+
+                    <div class="promo__item">
+                        <img class="promo__item-img" src="sale.svg" alt="">
+                        <a href="#" class="promo__item-btn">
+                            <p>Распродажа товаров</p>
+                            <img class="promo__item-arrow" src="strelka2.svg" alt="">
+                        </a>
+                    </div>
+                </section>
+
+                <!-- <div class="special">
+                    <h2 class="special-title"></h3>
+
+                </div> -->
+
+                <section class="recomendation">
+                    <h2 class="recomendation-title">Рекомендуем для вас</h3>
+                        <div class="recomendation__container">
+                            <article class="recomendation__container-item">
+                                <a href="#" class="container-item-link">
+                                    <div class="container-item-img">
+                                        <img src="prod.png" alt="">
+                                    </div>
+                                    <div class="container-item-price">
+                                        <h2 class="price-sale">15 923 ₽</h2>
+                                        <p class="price-percent">-12%</p>
+                                    </div>
+                                    <div class="container-item-oldprice">18 313 ₽</div>
+                                    <p class="container-item-name">Wi-Fi роутер Keenetic Giga KN-1012</p>
+
+                                    <footer class="container-item-buy">
+                                        <a href="#" class="item-buy-btn">Купить</a>
+                                        <a href="#" class="item-cart-btn"><img src="cartprod.svg" alt=""></a>
+                                    </footer>
+                                </a>
+                            </article>
+
+                            <article class="recomendation__container-item">
+                                <a href="#" class="container-item-link">
+                                    <div class="container-item-img">
+                                        <img src="prod.png" alt="">
+                                    </div>
+                                    <div class="container-item-price">
+                                        <h2 class="price-sale">15 923 ₽</h2>
+                                        <p class="price-percent">-12%</p>
+                                    </div>
+                                    <div class="container-item-oldprice">18 313 ₽</div>
+                                    <p class="container-item-name">Wi-Fi роутер Keenetic Giga KN-1012</p>
+
+                                    <footer class="container-item-buy">
+                                        <a href="#" class="item-buy-btn">Купить</a>
+                                        <a href="#" class="item-cart-btn"><img src="cartprod.svg" alt=""></a>
+                                    </footer>
+                                </a>
+                            </article>
+
+                            <article class="recomendation__container-item">
+                                <a href="#" class="container-item-link">
+                                    <div class="container-item-img">
+                                        <img src="prod.png" alt="">
+                                    </div>
+                                    <div class="container-item-price">
+                                        <h2 class="price-sale">15 923 ₽</h2>
+                                        <p class="price-percent">-12%</p>
+                                    </div>
+                                    <div class="container-item-oldprice">18 313 ₽</div>
+                                    <p class="container-item-name">Wi-Fi роутер Keenetic Giga KN-1012</p>
+
+                                    <footer class="container-item-buy">
+                                        <a href="#" class="item-buy-btn">Купить</a>
+                                        <a href="#" class="item-cart-btn"><img src="cartprod.svg" alt=""></a>
+                                    </footer>
+                                </a>
+                            </article>
+
+                            <article class="recomendation__container-item">
+                                <a href="#" class="container-item-link">
+                                    <div class="container-item-img">
+                                        <img src="prod.png" alt="">
+                                    </div>
+                                    <div class="container-item-price">
+                                        <h2 class="price-sale">15 923 ₽</h2>
+                                        <p class="price-percent">-12%</p>
+                                    </div>
+                                    <div class="container-item-oldprice">18 313 ₽</div>
+                                    <p class="container-item-name">Wi-Fi роутер Keenetic Giga KN-1012</p>
+
+                                    <footer class="container-item-buy">
+                                        <a href="#" class="item-buy-btn">Купить</a>
+                                        <a href="#" class="item-cart-btn"><img src="cartprod.svg" alt=""></a>
+                                    </footer>
+                                </a>
+                            </article>
+
+                            <article class="recomendation__container-item">
+                                <a href="#" class="container-item-link">
+                                    <div class="container-item-img">
+                                        <img src="prod.png" alt="">
+                                    </div>
+                                    <div class="container-item-price">
+                                        <h2 class="price-sale">15 923 ₽</h2>
+                                        <p class="price-percent">-12%</p>
+                                    </div>
+                                    <div class="container-item-oldprice">18 313 ₽</div>
+                                    <p class="container-item-name">Wi-Fi роутер Keenetic Giga KN-1012</p>
+
+                                    <footer class="container-item-buy">
+                                        <a href="#" class="item-buy-btn">Купить</a>
+                                        <a href="#" class="item-cart-btn"><img src="cartprod.svg" alt=""></a>
+                                    </footer>
+                                </a>
+                            </article>
+
+                            <article class="recomendation__container-item">
+                                <a href="#" class="container-item-link">
+                                    <div class="container-item-img">
+                                        <img src="prod.png" alt="">
+                                    </div>
+                                    <div class="container-item-price">
+                                        <h2 class="price-sale">15 923 ₽</h2>
+                                        <p class="price-percent">-12%</p>
+                                    </div>
+                                    <div class="container-item-oldprice">18 313 ₽</div>
+                                    <p class="container-item-name">Wi-Fi роутер Keenetic Giga KN-1012</p>
+
+                                    <footer class="container-item-buy">
+                                        <a href="#" class="item-buy-btn">Купить</a>
+                                        <a href="#" class="item-cart-btn"><img src="cartprod.svg" alt=""></a>
+                                    </footer>
+                                </a>
+                            </article>
+
+                            <article class="recomendation__container-item">
+                                <a href="#" class="container-item-link">
+                                    <div class="container-item-img">
+                                        <img src="prod.png" alt="">
+                                    </div>
+                                    <div class="container-item-price">
+                                        <h2 class="price-sale">15 923 ₽</h2>
+                                        <p class="price-percent">-12%</p>
+                                    </div>
+                                    <div class="container-item-oldprice">18 313 ₽</div>
+                                    <p class="container-item-name">Wi-Fi роутер Keenetic Giga KN-1012</p>
+
+                                    <footer class="container-item-buy">
+                                        <a href="#" class="item-buy-btn">Купить</a>
+                                        <a href="#" class="item-cart-btn"><img src="cartprod.svg" alt=""></a>
+                                    </footer>
+                                </a>
+                            </article>
+                        </div>
+                </section>
             </div>
         </div>
     </main>
 
+    <footer class="footer">
+        <div class="footer__bg">
+            <div class="wrapper">
+                <div class="footer__grid">
+                    <div class="footer__column">
+                        <a href="#" class="footer__logo">
+                            <img src="logo.svg" alt="Logo">
+                        </a>
+                    </div>
 
+                    <div class="footer__column">
+                        <h3 class="footer__title">Покупателям</h3>
+                        <ul class="footer__list">
+                            <li><a href="#" class="footer__link">Вопросы и ответы</a></li>
+                            <li><a href="#" class="footer__link">Юридическая информация</a></li>
+                        </ul>
+                    </div>
 
+                    <div class="footer__column">
+                        <h3 class="footer__title">Продавцам и партнёрам</h3>
+                        <ul class="footer__list">
+                            <li><a href="#" class="footer__link">Продавать товары</a></li>
+                            <li><a href="#" class="footer__link">Предложить сотрудничество</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__column">
+                        <h3 class="footer__title">Компания</h3>
+                        <ul class="footer__list">
+                            <li><a href="#" class="footer__link">О нас</a></li>
+                            <li><a href="#" class="footer__link">Контакты</a></li>
+                            <li><a href="#" class="footer__link">Вакансии</a></li>
+                            <li><a href="#" class="footer__link">Поддержка</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
