--- a/html/auth.html
+++ b/html/auth.html
@@ -60,7 +60,69 @@
 
     <main>
         <div class="wrapper">
+            <section class="auth__container">
 
+                <div class="container-left">
+                    <img src="auth-container-img.svg" alt="">
+                </div>
+                <div class="container-right">
+                    <h2 class="container-title">Регистрация аккаунта</h2>
+                    <form class="" action="">
+                        <div class="right-initial">
+                            <div class="initial-name">
+                                <p class="name">Имя</p>
+                                <input type="text">
+                            </div>
+                            <div class="initial-lastname">
+                                <p class="lastname">Фамилия</p>
+                                <input type="text">
+                            </div>
+                        </div>
+
+                        <div class="date-sex">
+                            <div class="sex">
+                                <p class="pol">Пол</p>
+                                <div class="pol-choice">
+                                    <p>Мужской</p>
+                                    <p>Женский</p>
+                                </div>
+                            </div>
+                            <div class="date">
+                                <p>Дата рождения</p>
+                                <div class="input-date">
+                                    <input type="date">
+                                    <img src="calendar.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="login-email">
+                            <div class="login">
+                                <p>Логин</p>
+                                <input type="text">
+                            </div>
+                            <div class="email">
+                                <p>Эл. почта</p>
+                                <input type="email">
+                            </div>
+                        </div>
+
+                        <div class="password">
+                            <div class="firts-password">
+                                <p>Пароль</p>
+                                <input type="password">
+                            </div>
+                            <div class="repeate-pass">
+                                <p>Подтвердите пароль</p>
+                                <input type="password">
+                            </div>
+                        </div>
+                        <button>Зарегистрироваться</button>
+                        <p class="">Уже есть аккаунт?</p>
+                        <button>Войти</button>
+                    </form>
+                </div>
+            </section>
         </div>
     </main>
 </body>
