--- a/html/auth.html
+++ b/html/auth.html
@@ -59,8 +59,147 @@
     </header>
 
     <main>
+
+        <!-- Во фронте переместить пол в ui -->
+
         <div class="wrapper">
-            <section class="auth__container">
+            <section class="page-profile">
+                <div class="">
+                    <div class="profile-person">
+                        <div class="profile-person__info">
+                            <div class="info-img">
+                                <img src="" alt="profile-img">
+                            </div>
+                            <div class="info-user">
+                                <p class="user-role">Пользователь</p>
+                                <p class="user-username">ural</p>
+                                <p class="user-email">patriot@maga.sry</p>
+                            </div>
+                        </div>
+                        <div class="update-user">
+                            <button class="update-user-btn">Редактировать профиль</button>
+                        </div>
+                    </div>
+                </div>
+
+                <hr class="separation-line">
+
+                <section class="gen-info">
+                    <div class="gen-info__info">
+                        <img src="" alt="User prof">
+                        <p>Общая информация</p>
+                    </div>
+
+                    <div class="gen-info__initial">
+                        <div class="initial__first-name">
+                            <p>Фамилия</p>
+                            <input type="text">
+                        </div>
+                        <div class="initial__last-name">
+                            <p>Имя</p>
+                            <input type="text">
+                        </div>
+                        <div class="initial__birthday">
+                            <p>Дата рождения</p>
+                            <input type="date">
+                        </div>
+                    </div>
+
+                    <div class="sex">
+                        <p class="pol">Пол</p>
+                        <div class="pol-choice">
+                            <p>Мужской</p>
+                            <p>Женский</p>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="gen-info">
+                    <div class="gen-info__info">
+                        <img src="" alt="User prof">
+                        <p>Общая информация</p>
+                    </div>
+
+                    <div class="gen-info__initial">
+                        <div class="initial__first-name">
+                            <p>Фамилия</p>
+                            <input type="text">
+                        </div>
+                        <div class="initial__last-name">
+                            <p>Имя</p>
+                            <input type="text">
+                        </div>
+                        <div class="initial__birthday">
+                            <p>Дата рождения</p>
+                            <input type="date">
+                        </div>
+                    </div>
+
+                    <div class="sex">
+                        <p class="pol">Пол</p>
+                        <div class="pol-choice">
+                            <p>Мужской</p>
+                            <p>Женский</p>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="gen-info">
+                    <div class="gen-info__info">
+                        <img src="" alt="User prof">
+                        <p>Общая информация</p>
+                    </div>
+
+                    <div class="gen-info__initial">
+                        <div class="initial__first-name">
+                            <p>Фамилия</p>
+                            <input type="text">
+                        </div>
+                        <div class="initial__last-name">
+                            <p>Имя</p>
+                            <input type="text">
+                        </div>
+                        <div class="initial__birthday">
+                            <p>Дата рождения</p>
+                            <input type="date">
+                        </div>
+                    </div>
+
+                    <div class="sex">
+                        <p class="pol">Пол</p>
+                        <div class="pol-choice">
+                            <p>Мужской</p>
+                            <p>Женский</p>
+                        </div>
+                    </div>
+                </section>
+        </div>
+
+
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- <section class="auth__container">
 
                 <div class="container-left">
                     <img src="auth-container-img.svg" alt="">
@@ -122,7 +261,7 @@
                         <button>Войти</button>
                     </form>
                 </div>
-            </section>
+            </section> -->
         </div>
     </main>
 </body>
