--- a/html/auth.html
+++ b/html/auth.html
@@ -84,6 +84,50 @@
 
                 <hr class="separation-line">
 
+
+
+
+
+                <section class="gen-info">
+                    <div class="gen-info__info">
+                        <div class="gen-info__general">
+                            <img src="gen-info-img.svg" alt="User prof" class="">
+                            <p>Общая информация</p>
+                        </div>
+                    </div>
+
+                    <div class="gen-info__initial">
+                        <div class="initial__first-name">
+                            <p class="name__initial">Фамилия</p>
+                            <p class="first-name-input">Иванов</p>
+                            <!-- <input type="text"> -->
+                        </div>
+                        <div class="initial__last-name">
+                            <p class="name__initial">Имя</p>
+                            <p class="first-name-input">Иванов</p>
+                            <!-- <input type="text"> -->
+                        </div>
+                        <div class="initial__birthday">
+                            <p class="name__initial">Дата рождения</p>
+                            <p class="first-name-input">Иванов</p>
+                            <!-- <input type="date"> -->
+                        </div>
+                    </div>
+
+                    <div class="sex">
+                        <p class="pol">Пол</p>
+                        <div class="pol-choice">
+                            <p>Мужской</p>
+                            <p>Женский</p>
+                        </div>
+                    </div>
+                </section>
+
+
+
+
+
+
                 <section class="gen-info">
                     <div class="gen-info__info">
                         <img src="" alt="User prof">
@@ -114,35 +158,10 @@
                     </div>
                 </section>
 
-                <section class="gen-info">
-                    <div class="gen-info__info">
-                        <img src="" alt="User prof">
-                        <p>Общая информация</p>
-                    </div>
 
-                    <div class="gen-info__initial">
-                        <div class="initial__first-name">
-                            <p>Фамилия</p>
-                            <input type="text">
-                        </div>
-                        <div class="initial__last-name">
-                            <p>Имя</p>
-                            <input type="text">
-                        </div>
-                        <div class="initial__birthday">
-                            <p>Дата рождения</p>
-                            <input type="date">
-                        </div>
-                    </div>
 
-                    <div class="sex">
-                        <p class="pol">Пол</p>
-                        <div class="pol-choice">
-                            <p>Мужской</p>
-                            <p>Женский</p>
-                        </div>
-                    </div>
-                </section>
+
+
 
                 <section class="gen-info">
                     <div class="gen-info__info">
