need-rw-profile-page

--- a/html/auth.html
+++ b/html/auth.html
@@ -71,13 +71,17 @@
                                 <img src="" alt="profile-img">
                             </div>
                             <div class="info-user">
-                                <p class="user-role">Пользователь</p>
+                                <!-- <p class="user-role">Пользователь</p>
                                 <p class="user-username">ural</p>
-                                <p class="user-email">patriot@maga.sry</p>
+                                <p class="user-email">patriot@maga.sry</p> -->
+
+                                <p>Сменить профиль</p>
+                                <input type="text" name="" id="" placeholder="Введите url изображения">
                             </div>
                         </div>
                         <div class="update-user">
-                            <button class="update-user-btn">Редактировать профиль</button>
+                            <button class="update-user-btn">Отменить</button>
+                            <button class="update-user-btn">Сохранить измнения</button>
                         </div>
                     </div>
                 </div>
