--- a/html/auth.html
+++ b/html/auth.html
@@ -60,149 +60,183 @@
 
     <main>
 
-        <!-- Во фронте переместить пол в ui -->
-
-        <div class="wrapper">
-            <section class="page-profile">
-                <div class="">
-                    <div class="profile-person">
-                        <div class="profile-person__info">
-                            <div class="info-img">
-                                <img src="" alt="profile-img">
-                            </div>
-                            <div class="info-user">
-                                <!-- <p class="user-role">Пользователь</p>
-                                <p class="user-username">ural</p>
-                                <p class="user-email">patriot@maga.sry</p> -->
-
-                                <p>Сменить профиль</p>
-                                <input type="text" name="" id="" placeholder="Введите url изображения">
-                            </div>
-                        </div>
-                        <div class="update-user">
-                            <button class="update-user-btn">Отменить</button>
-                            <button class="update-user-btn">Сохранить измнения</button>
-                        </div>
+        <!-- <div class="wrapper">
+            <div class="cart-container">
+                <div class="cart-container__left">
+                    <header class="left__header">
+                        <h2 class="left__header-title">Корзина</h2>
+                        <p class="left__header-count">товаров: 12</p>
+                    </header>
+                    <div class="left__choice">
+                        <button class="choice-product">Выбрано 2 товаров</button>
+                        <button class="choice-all-products">Выбрать все</button>
                     </div>
+                    
+                    <section class="cart-section">
+                        <div class="cart__products">
+                            <div class="cart__products-item-img">
+                                <img src="" alt="">
+                            </div>
+                            <div class="cart__product-item">
+                                <div class="products-item-title">
+                                    Wi-Fi роутер Keenetic Giga KN-1012
+                                </div>
+                                <button>Udal</button>
+                            </div>
+
+                            <div class="cart__product-count">
+                                -1+
+                            </div>
+                            <div class="cart__product-price">
+                                <div class="product-price__new">
+                                    15000
+                                </div>
+                                <div class="product-price__old">
+                                    25000
+                                </div>
+                                <div class="product-price__sale">
+                                    -12%
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="cart-section">
+                        <div class="cart__products">
+                            <div class="cart__products-item-img">
+                                <img src="" alt="">
+                            </div>
+                            <div class="cart__product-item">
+                                <div class="products-item-title">
+                                    Wi-Fi роутер Keenetic Giga KN-1012
+                                </div>
+                                <button>Udal</button>
+                            </div>
+
+                            <div class="cart__product-count">
+                                -1+
+                            </div>
+                            <div class="cart__product-price">
+                                <div class="product-price__new">
+                                    15000
+                                </div>
+                                <div class="product-price__old">
+                                    25000
+                                </div>
+                                <div class="product-price__sale">
+                                    -12%
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+
+                    <section class="cart-section">
+                        <div class="cart__products">
+                            <div class="cart__products-item-img">
+                                <img src="" alt="">
+                            </div>
+                            <div class="cart__product-item">
+                                <div class="products-item-title">
+                                    Wi-Fi роутер Keenetic Giga KN-1012
+                                </div>
+                                <button>Udal</button>
+                            </div>
+
+                            <div class="cart__product-count">
+                                -1+
+                            </div>
+                            <div class="cart__product-price">
+                                <div class="product-price__new">
+                                    15000
+                                </div>
+                                <div class="product-price__old">
+                                    25000
+                                </div>
+                                <div class="product-price__sale">
+                                    -12%
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+
                 </div>
 
-                <hr class="separation-line">
+
+
+
+                <div class="cart-container__right">[eq</div>
+            </div>
+        </div> -->
 
 
 
 
+        <div class="wrapper">
+            <div class="cart-container">
+                <!-- Левая панель -->
+                <div class="cart-container__left">
+                    <header class="left__header">
+                        <h2 class="left__header-title">Корзина</h2>
+                        <p class="left__header-count">товаров: 12</p>
+                    </header>
 
-                <section class="gen-info">
-                    <div class="gen-info__info">
-                        <div class="gen-info__general">
-                            <img src="gen-info-img.svg" alt="User prof" class="">
-                            <p>Общая информация</p>
-                        </div>
+                    <div class="left__choice">
+                        <button class="choice-product">Выбрано 2 товара</button>
+                        <button class="choice-all-products">Выбрать все</button>
                     </div>
 
-                    <div class="gen-info__initial">
-                        <div class="initial__first-name">
-                            <p class="name__initial">Фамилия</p>
-                            <p class="first-name-input">Иванов</p>
-                            <!-- <input type="text"> -->
+                    <section class="cart-section">
+                        <div class="cart__products">
+                            <div class="cart__products-item-img">
+                                <img src="img/router.jpg" alt="Wi-Fi роутер">
+                            </div>
+                            <div class="cart__product-item">
+                                <div class="products-item-title">Wi-Fi роутер Keenetic Giga KN-1012</div>
+                                <button class="remove-btn">d</button>
+                            </div>
+
+                            <div class="cart__product-count">
+                                <button class="count-btn">-</button>
+                                <span>1</span>
+                                <button class="count-btn">+</button>
+                            </div>
+
+                            <div class="cart__product-price">
+                                <div class="product-price__new">15 923 ₽</div>
+                                <div class="product-price__old">18 313 ₽</div>
+                                <div class="product-price__sale">-12%</div>
+                            </div>
                         </div>
-                        <div class="initial__last-name">
-                            <p class="name__initial">Имя</p>
-                            <p class="first-name-input">Иванов</p>
-                            <!-- <input type="text"> -->
-                        </div>
-                        <div class="initial__birthday">
-                            <p class="name__initial">Дата рождения</p>
-                            <p class="first-name-input">Иванов</p>
-                            <!-- <input type="date"> -->
-                        </div>
+                    </section>
+                </div>
+
+                <div class="cart-container__right">
+                    <h3 class="right-title">Способ оплаты</h3>
+                    <div class="payment-details">
+                        <p>Основной способ оплаты</p>
+                        <p>**** **** **** 1234 <button class="edit-btn">✏️</button></p>
                     </div>
 
-                    <div class="sex">
-                        <p class="pol">Пол</p>
-                        <div class="pol-choice">
-                            <p>Мужской</p>
-                            <p>Женский</p>
-                        </div>
-                    </div>
-                </section>
-
-
-
-
-
-
-                <section class="gen-info">
-                    <div class="gen-info__info">
-                        <img src="" alt="User prof">
-                        <p>Общая информация</p>
+                    <h3 class="right-title">Доставка</h3>
+                    <div class="delivery-details">
+                        <p>г. Екатеринбург, ул. Какая-то, д. 8, кв. 12</p>
+                        <p>Доставим 29 декабря</p>
+                        <a href="#" class="change-delivery">Сменить адрес доставки</a>
                     </div>
 
-                    <div class="gen-info__initial">
-                        <div class="initial__first-name">
-                            <p>Фамилия</p>
-                            <input type="text">
-                        </div>
-                        <div class="initial__last-name">
-                            <p>Имя</p>
-                            <input type="text">
-                        </div>
-                        <div class="initial__birthday">
-                            <p>Дата рождения</p>
-                            <input type="date">
-                        </div>
+                    <hr>
+
+                    <div class="order-summary">
+                        <p>Товары, 2 шт. <span>19 999 ₽</span></p>
+                        <p>Скидка <span>-999 ₽</span></p>
+                        <p class="total">Итого <span>19 000 ₽</span></p>
+                        <button class="pay-btn">Перейти к оплате</button>
                     </div>
-
-                    <div class="sex">
-                        <p class="pol">Пол</p>
-                        <div class="pol-choice">
-                            <p>Мужской</p>
-                            <p>Женский</p>
-                        </div>
-                    </div>
-                </section>
-
-
-
-
-
-
-                <section class="gen-info">
-                    <div class="gen-info__info">
-                        <img src="" alt="User prof">
-                        <p>Общая информация</p>
-                    </div>
-
-                    <div class="gen-info__initial">
-                        <div class="initial__first-name">
-                            <p>Фамилия</p>
-                            <input type="text">
-                        </div>
-                        <div class="initial__last-name">
-                            <p>Имя</p>
-                            <input type="text">
-                        </div>
-                        <div class="initial__birthday">
-                            <p>Дата рождения</p>
-                            <input type="date">
-                        </div>
-                    </div>
-
-                    <div class="sex">
-                        <p class="pol">Пол</p>
-                        <div class="pol-choice">
-                            <p>Мужской</p>
-                            <p>Женский</p>
-                        </div>
-                    </div>
-                </section>
+                </div>
+            </div>
         </div>
-
-
-
-
-        </section>
-
 
 
 
