--- a/html/auth.html
+++ b/html/auth.html
@@ -60,122 +60,143 @@
 
     <main>
 
-        <!-- <div class="wrapper">
+        <div class="wrapper">
             <div class="cart-container">
                 <div class="cart-container__left">
-                    <header class="left__header">
-                        <h2 class="left__header-title">Корзина</h2>
-                        <p class="left__header-count">товаров: 12</p>
-                    </header>
-                    <div class="left__choice">
-                        <button class="choice-product">Выбрано 2 товаров</button>
-                        <button class="choice-all-products">Выбрать все</button>
+                    <div class="left-padding">
+                        <header class="left__header">
+                            <h2 class="left__header-title">Корзина</h2>
+                            <p class="left__header-count">товаров: 12</p>
+                        </header>
+                        <div class="left__choice">
+                            <button class="choice-product">Выбрано 2 товаров</button>
+                            <button class="choice-all-products">Выбрать все</button>
+                        </div>
+
+                        <section class="cart-section">
+                            <div class="cart__products">
+                                <div class="cart__products-item-img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="cart__product-item">
+                                    <div class="products-item-title">
+                                        Wi-Fi роутер Keenetic Giga KN-1012
+                                    </div>
+                                    <button>Udal</button>
+                                </div>
+
+                                <div class="cart__product-count">
+                                    -1+
+                                </div>
+                                <div class="cart__product-price">
+                                    <div class="product-price__new">
+                                        15000
+                                    </div>
+                                    <div class="product-price__old">
+                                        25000
+                                    </div>
+                                    <div class="product-price__sale">
+                                        -12%
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+
+                        <section class="cart-section">
+                            <div class="cart__products">
+                                <div class="cart__products-item-img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="cart__product-item">
+                                    <div class="products-item-title">
+                                        Wi-Fi роутер Keenetic Giga KN-1012
+                                    </div>
+                                    <button>Udal</button>
+                                </div>
+
+                                <div class="cart__product-count">
+                                    -1+
+                                </div>
+                                <div class="cart__product-price">
+                                    <div class="product-price__new">
+                                        15000
+                                    </div>
+                                    <div class="product-price__old">
+                                        25000
+                                    </div>
+                                    <div class="product-price__sale">
+                                        -12%
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+
+
+                        <section class="cart-section">
+                            <div class="cart__products">
+                                <div class="cart__products-item-img">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="cart__product-item">
+                                    <div class="products-item-title">
+                                        Wi-Fi роутер Keenetic Giga KN-1012
+                                    </div>
+                                    <button>Udal</button>
+                                </div>
+
+                                <div class="cart__product-count">
+                                    -1+
+                                </div>
+                                <div class="cart__product-price">
+                                    <div class="product-price__new">
+                                        15000
+                                    </div>
+                                    <div class="product-price__old">
+                                        25000
+                                    </div>
+                                    <div class="product-price__sale">
+                                        -12%
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+
                     </div>
-                    
-                    <section class="cart-section">
-                        <div class="cart__products">
-                            <div class="cart__products-item-img">
-                                <img src="" alt="">
-                            </div>
-                            <div class="cart__product-item">
-                                <div class="products-item-title">
-                                    Wi-Fi роутер Keenetic Giga KN-1012
-                                </div>
-                                <button>Udal</button>
-                            </div>
-
-                            <div class="cart__product-count">
-                                -1+
-                            </div>
-                            <div class="cart__product-price">
-                                <div class="product-price__new">
-                                    15000
-                                </div>
-                                <div class="product-price__old">
-                                    25000
-                                </div>
-                                <div class="product-price__sale">
-                                    -12%
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section class="cart-section">
-                        <div class="cart__products">
-                            <div class="cart__products-item-img">
-                                <img src="" alt="">
-                            </div>
-                            <div class="cart__product-item">
-                                <div class="products-item-title">
-                                    Wi-Fi роутер Keenetic Giga KN-1012
-                                </div>
-                                <button>Udal</button>
-                            </div>
-
-                            <div class="cart__product-count">
-                                -1+
-                            </div>
-                            <div class="cart__product-price">
-                                <div class="product-price__new">
-                                    15000
-                                </div>
-                                <div class="product-price__old">
-                                    25000
-                                </div>
-                                <div class="product-price__sale">
-                                    -12%
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
-
-                    <section class="cart-section">
-                        <div class="cart__products">
-                            <div class="cart__products-item-img">
-                                <img src="" alt="">
-                            </div>
-                            <div class="cart__product-item">
-                                <div class="products-item-title">
-                                    Wi-Fi роутер Keenetic Giga KN-1012
-                                </div>
-                                <button>Udal</button>
-                            </div>
-
-                            <div class="cart__product-count">
-                                -1+
-                            </div>
-                            <div class="cart__product-price">
-                                <div class="product-price__new">
-                                    15000
-                                </div>
-                                <div class="product-price__old">
-                                    25000
-                                </div>
-                                <div class="product-price__sale">
-                                    -12%
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
-
                 </div>
 
 
 
+                <div class="cart-container__right">
+                    <h3 class="right-title">Способ оплаты</h3>
+                    <div class="payment-details">
+                        <p>Основной способ оплаты</p>
+                        <p>**** **** **** 1234 <button class="edit-btn">✏️</button></p>
+                    </div>
 
-                <div class="cart-container__right">[eq</div>
+                    <h3 class="right-title">Доставка</h3>
+                    <div class="delivery-details">
+                        <p>г. Екатеринбург, ул. Какая-то, д. 8, кв. 12</p>
+                        <p>Доставим 29 декабря</p>
+                        <a href="#" class="change-delivery">Сменить адрес доставки</a>
+                    </div>
+
+                    <hr>
+
+                    <div class="order-summary">
+                        <p>Товары, 2 шт. <span>19 999 ₽</span></p>
+                        <p>Скидка <span>-999 ₽</span></p>
+                        <p class="total">Итого <span>19 000 ₽</span></p>
+                        <button class="pay-btn">Перейти к оплате</button>
+                    </div>
+                </div>
             </div>
-        </div> -->
+        </div>
 
 
 
 
-        <div class="wrapper">
+        <!-- <div class="wrapper">
             <div class="cart-container">
-                <!-- Левая панель -->
                 <div class="cart-container__left">
                     <header class="left__header">
                         <h2 class="left__header-title">Корзина</h2>
@@ -236,7 +257,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 
